--- a/views/twig/layouts/main.twig
+++ b/views/twig/layouts/main.twig
@@ -9,7 +9,8 @@
     <title>Интернет-магазин PHP2</title>
 </head>
 <body>
-<div class="header">Это Хедер</div>
+<div class="header">Это Хедер<br>
+</div>
 <div class="container">
     {{ content }}
 </div>
